--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Alaska -- Description and travel'
 - !lcc 'F850.5'
+- GITenberg
 title: The Land of Tomorrow
 url: http://www.gutenberg.org/ebooks/41061
